<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="loginsystem.ForgetPage">

    <TextView
        android:text="@string/forgetTitle"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/forgetIns"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/sendingEmail"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/type_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:text="@string/forgetSug"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/Request"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SubmitHandler"
            />

        <Button
            android:id="@+id/Reject"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CancelHandler"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/ErrorMessage"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>

