<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="socialsystem.SocialPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/weatherButton"
            android:text="@string/weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="WButtonHandler"
            />
        <Button
            android:id="@+id/logout"
            android:text="@string/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="PostHandler"
            />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/messageBox"
            android:hint="@string/textHint"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                android:id="@+id/posting"
                android:text="@string/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="PostHandler"/>
            <Button
                android:id="@+id/cancelPost"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="PostHandler"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
